# yi-rag

./: .gitattributes  .gitignore  Dockerfile  OBSERVABILITY_STATUS.md  OBSERVABILITY_SUCCESS.md  README.md  app.py  pyproject.toml  requirements.txt  trace-c22fdf50049125ba39b86e284201bb60.json  trace-c22fdf50049125ba39b86e284201bb60.json:Zone.Identifier
app/: app.py  callbacks.py  helpers.py  model_downloader.py
config/: generator.yaml  vectors.yaml
core/: config.py  embeddings.py  generate.py  preprocess.py  retrieve.py  schemas.py  sparse_vectors.py  store_qdrant.py  translate.py  utils.py
data/sparse_model/: sparse_cfg.json  sparse_meta.json  tfidf_vectorizer.joblib
engines/: contracts.py  registry.py
engines/generators/: gemini_generator.py  groq_generator.py  openai_generator.py
observability/: README.md  README_NEW.md  __init__.py  langfuse_client.py  langfuse_scores.py  logger.py  multi_exporter.py  otel_client.py  phoenix_exporter.py  schemas.py  setup_guide.py
observability/exporters/: __init__.py  console.py  langfuse.py  phoenix.py
scripts/: 1_preprocess.py  2_build_sparse_vectors.py  3_generate_embeddings.py  4_index_corpus.py  5_translate_chunks.py  6_add_sparse_vectors.py  6_verify_translations.py  fix_indexed_metadata.py  fix_test_indexes.py  index_corpus.py  inspect_parquet.py  preprocess_corpus.py
tests/: calculate_corpus_costs.py  debug_chunk_endings.py  diagnose_retrieval.py  test_chunk_optimization.py  test_full_pipeline.py  test_smart_chunking.py  test_tokenization.py
