[tool.poetry]
name = "yi-rag"
version = "0.1.0"
description = ""
authors = ["rubin145 <rubinstein.nicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
gradio = "^5.42.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
tiktoken = "^0.11.0"
openai = "^1.99.9"
google-generativeai = "^0.8.5"
google-genai = "^1.30.0"
cohere = "^5.17.0"
pyarrow = "^21.0.0"
pyyaml = "^6.0.2"
qdrant-client = "^1.15.1"
opentelemetry-api = "^1.36.0"
opentelemetry-sdk = "^1.36.0"
opentelemetry-exporter-otlp = "^1.36.0"
arize-otel = "^0.9.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.36.0"
openinference-semantic-conventions = "^0.1.21"
langfuse = {extras = ["opentelemetry"], version = "^3.2.7"}
tqdm = "^4.66.4"
joblib = "^1.5.1"
scipy = "^1.16.1"
scikit-learn = "^1.7.1"
openinference-instrumentation = "^0.1.37"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
